added lorem text

--- a/for-bash.html
+++ b/for-bash.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores hic praesentium recusandae corrupti vitae maxime, rerum adipisci at nulla est vero error facilis facere mollitia eius quo nisi consequatur aliquam.</h1>
 </body>
 </html>
